Updated endpoints for artists rather than orchestras
