# app/controllers/v1/indexes/artist.rb
@@ -2,10 +2,14 @@
 
 module V1
   module Indexes
-    class Orchestra < Index
-      SORTABLE_FIELDS = %i[name updated_at created_at].freeze
+    class Artist < Index
+      SORTABLE_FIELDS = %i[name genre facebook twitter website updated_at created_at].freeze
       FILTERABLE_FIELDS = [
         name: [:contains],
+        genre: [:contains],
+        facebook: [:contains],
+        twitter: [:contains],
+        website: [:contains],
         created_at: %i[lt lte gt gte],
         updated_at: %i[lt lte gt gte]
       ].freeze
