# app/serializers/artist_serializer.rb
@@ -1,11 +1,15 @@
 # frozen_string_literal: true
 
-class OrchestraSerializer
+class ArtistSerializer
   include FastJsonapi::ObjectSerializer
 
   has_many :events
 
   attributes :name,
+             :website,
+             :facebook,
+             :twitter,
+             :genre,
              :created_at,
              :updated_at
 
