# app/serializers/location_serializer.rb
@@ -4,9 +4,10 @@ class LocationSerializer
   include FastJsonapi::ObjectSerializer
 
   has_many :venues
+  has_many :addresses
 
-  attributes :city,
-             :state,
+  attributes :ward,
+             :borough,
              :created_at,
              :updated_at
 
